Bug 154087 - Scroll bar disappears after searching a character
Summary: Scroll bar disappears after searching a character
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
6.1.0.3 release
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.6.0 target:7.4.7 target:7.5.3
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Special-Character
  Show dependency treegraph
 
Reported: 2023-03-09 09:40 UTC by Andreas Heinisch
Modified: 2023-03-12 18:52 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Andreas Heinisch 2023-03-09 09:40:41 UTC
Description:
After searching for a characters' name in the Special Characters dialog, the scroll bar of the grid disappears. In addition, the grid of the special characters cannot be anymore scrolled using the mouse wheel.

Steps to Reproduce:
1. Open Writer
2. Insert -> Special Character...
3. Insert a letter into the search field

Actual Results:
Scrollbar disappears and the grid of the characters cannot be scrolled anymore using the mouse wheel. It can be navigated using the arrows on the keyboard.

Expected Results:
Scrollbar does not disappear and the grid of the characters can be scrolled using the mouse wheel.


Reproducible: Always


User Profile Reset: No

Additional Info:
The implementation of the grid can be found in svx/source/dialog/charmap.cxx and in svx/source/dialog/searchcharmap.cxx. The implementation could be unified where the latter should be dropped since it contains a lot of dupicate code parts.

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 6c2542306bcc7caaab947664f252265058964fc2
CPU threads: 16; OS: Windows 10.0 Build 19044; UI render: Skia/Raster; VCL: win
Locale: de-DE (de_DE); UI: en-US
Calc: CL threaded
Comment 1 Stéphane Guillou (stragu) 2023-03-09 14:39:34 UTC
Reproduced in:

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: a179f6c91692076e7e17babf4890638caa398384
CPU threads: 4; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: en-GB (en_GB); UI: en-GB
Calc: threaded

Regression, as I can't reproduce in 6.0.0.3 but I can in 6.4.0.3.

gtk3 VCL not affected.
Comment 2 Stéphane Guillou (stragu) 2023-03-09 14:40:40 UTC
gen VCL also affected, so not Windows-only.
Comment 3 Stéphane Guillou (stragu) 2023-03-09 18:12:08 UTC
Bibisected with linux-64-6.1 repository and gen VCL to first bad commit 12014b2c6a676866138533a4343fb72e107e5f8d which points to core commit:

commit 374599f8c26713905a310673d2b429083321186a
author	Caolán McNamara <caolanm@redhat.com>	Thu Mar 22 13:41:50 2018 +0000
committer	Caolán McNamara <caolanm@redhat.com>	Fri Mar 30 14:32:12 2018 +0200
tree 2ee4be182670b2ca9396a5f42d4122bed806a3ba
parent 2d3a5e81e9730c1190f8592f85f5b99b6d4587ef
weld SvxCharacterMap dialog
Change-Id: Ia2743d6958021c525a1900154dcbb69ae33fc400
Reviewed-on: https://gerrit.libreoffice.org/52084

Caolán, can you please look at this old regression? :)
Comment 4 Commit Notification 2023-03-10 15:19:17 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/e6230bbfc9526af65e6618390593c3a3c90743d0

Resolves: tdf#154087 update scrollbar range when search criteria change

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Caolán McNamara 2023-03-10 15:19:50 UTC
done in trunk, backport to 7-5 and 7-4 in gerrit
Comment 6 Andreas Heinisch 2023-03-10 17:32:34 UTC
Verified in:
Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 847da00993a27d1fd24a6c1071bc7822721155b4
CPU threads: 6; OS: Windows 10.0 Build 19044; UI render: default; VCL: win
Locale: de-DE (de_DE); UI: en-US
Calc: CL threaded
Comment 7 Commit Notification 2023-03-12 18:52:09 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-4":

https://git.libreoffice.org/core/commit/15189c9cefccb1d7ed9026cfd62ca9745427d387

Resolves: tdf#154087 update scrollbar range when search criteria change

It will be available in 7.4.7.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2023-03-12 18:52:12 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/c5460594c21bab12db2d5a6601db84ea9726c416

Resolves: tdf#154087 update scrollbar range when search criteria change

It will be available in 7.5.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.